TGR-666: Fix Sonar bugs